# repo-context-clipboard-for-ai

./: .gitignore  CMakeLists.txt  LICENSE  PULL_REQUEST.md  README.md  directory.hpp  list_logger.hpp  main.cpp
.github/workflows/: windows-build.yml
client/: parse_flags.hpp
directory_tree/: directory_tree.cpp  directory_tree.hpp
file_messenger/: directory.cpp  directory.hpp  file_locator.hpp  location.hpp
file_records/: filesystem_node.hpp  folder_rep.cpp  folder_rep.hpp
misc/: get_content_from_files.hpp
readme_subfolder/: CMake.md
test_repurposing/: tests.hpp
traversals/: traversals_content_roots.hpp  traversals_string_tree.hpp
